--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "InnexiaMusic",
-  "logo": "https://telegra.ph/file/b1063fce561d22c59e746.jpg",
+  "name": "PrinceMusicWorld",
+  "logo": "https://telegra.ph/file/3b866961b5c0433deca01.jpg",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
-  "repository": "https://github.com/DarkCybers/innexiaMusic",
+  "repository": "https://github.com/Princepatil/PrinceMusicWorld",
   "stack": "container",
   "buildpacks": [
    {
@@ -50,7 +50,7 @@
     "BG_IMAGE": {
       "description": "BG image of bot (Use transparent one) [IGNORE].",
       "required": false,
-      "value": "https://telegra.ph/file/c0602eaaad36db501652c.png"
+      "value": "https://telegra.ph/file/cc6db31173b825e56de5b.png"
     },     
     "UPDATES_CHANNEL": {
       "description": "Updates Channel without @ [Leave this if you don't have one].",
@@ -77,7 +77,7 @@
     "DURATION_LIMIT": {
       "description": "Max audio duration limit for downloads (minutes).",
       "required": true,
-      "value": "15"
+      "value": "60"
     }
   }
 }
